--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,14 @@ body {
   font-size:16px;
   color:#aaa;
 }
+
+.btnStyle {
+  color: white;
+  background: teal;
+  margin-right : 10px;
+  padding: 0.375rem 0.75rem;
+  border: 1px solid teal;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  line-height: 1.5;
+};
